[gd_scene load_steps=4 format=3 uid="uid://d0hn8i6m4vdkd"]

[ext_resource type="Theme" uid="uid://cxhxstov7n5l5" path="res://theme.tres" id="1_as5ym"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_dnmae"]
[ext_resource type="Material" uid="uid://boeddgy1okiog" path="res://Shaders/enemy_take_damage.tres" id="2_2p0a6"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_dnmae")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -218.0
offset_right = 360.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="YouDiedLabel" type="Label" parent="VBoxContainer"]
material = ExtResource("2_2p0a6")
layout_mode = 2
theme = ExtResource("1_as5ym")
theme_override_font_sizes/font_size = 60
text = "YOU DIED"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_as5ym")
theme_override_font_sizes/font_size = 60
text = "Level"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_as5ym")
theme_override_font_sizes/font_size = 60
text = "Enemies Killed"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_as5ym")
theme_override_font_sizes/font_size = 60
text = "Time"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_as5ym")
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
